# Vffmpeg

./: .gitignore  CMakeLists.txt  README.md  VFFmpeg.cpp
lib/ffmpeg/: CmakeLists.txt
lib/ffmpeg/include/libavutil/: ffversion.h
src/: VFFmpeg.cpp  VFFmpeg.h  video.cpp  video.hpp
src/codecs/: VideoDecoder.cpp  VideoDecoder.h
